# NESO

./: .gitignore  CMakeLists.txt  ICS.py  README.md  activate  cmake_opts.sh  comp_bcs.py  gdb_wrapper.sh  plot_profs.py  spack.yaml
.github/workflows/: clang-tidy-review.yaml
docker/: docker-compose.yaml
docker/builder-base/: Dockerfile
docs/: Makefile  build_branch_docs.sh
docs/doxygen/: Makefile
docs/sphinx/source/: conf.py  solvers.rst
examples/Diffusion/: README.md
examples/DriftPlane/: README.md
examples/DriftReduced/: README.md
examples/DriftReduced/3DHW/: hw.xml
examples/Electrostatic2D3V/two_stream/: run_cmd_template.txt
examples/H3LAPD/: .gitignore  README.md  readme.md
examples/H3LAPD/1Din1D-outflow/: linear.geo  outflow1d_linear.xml  run_cmd_template.txt
examples/H3LAPD/1Din3D-outflow/: cuboid_periodic_10x10x200.geo  cuboid_wrapped.geo  outflow1d.xml  run_cmd_template.txt
examples/H3LAPD/1d/: README.md  cuboid.geo  lapd.xml  linear.xml  outflow1d.xml  outflow1d_linear.xml
examples/H3LAPD/2Din3D-hw_fluid-only/: hw.xml
examples/H3LAPD/3D-hw-H3comp/: check_ICs.py  cuboid.xml  (+8 more)
examples/SimpleSOL/: README.md
include/nektar_interface/: function_evaluation.hpp
scripts/: build_docker.sh  format_all.sh  geo_to_xml.sh  run_eg.sh
scripts/plantuml/: .gitignore  NESO_talk_base_classes.puml  gen_plantuml.py  requirements.txt
solvers/H3LAPD/: CMakeLists.txt
solvers/MaxwellWave/: CMakeLists.txt  MaxwellWave2D3V.cpp
solvers/MaxwellWave/ParticleSystems/: ChargedParticles.hpp
solvers/SimpleSOL/: SimpleSOL.cpp
test/: main.cpp
(+85 files in other folders)
